--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,1 +1,22 @@
-<p>navbar works!</p>
+<!-- <nav class="navbar bg-dark" data-bs-theme="dark">
+  wefwfewefw
+</nav> -->
+
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+  <div class="container container-fluid">
+    <a class="navbar-brand" href="#">BLAZE</a>
+    <button class="navbar-toggler" type="button"
+      data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" [routerLink]="['/home']" routerLinkActive="router-link-active" >Home</a>
+        <a class="nav-link" [routerLink]="['/client']" routerLinkActive="router-link-active">Clientes</a>
+        <a class="nav-link" href="/clients">Clients</a>
+      </div>
+    </div>
+  </div>
+</nav>
