--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,10 @@
-<h5>CRUD clientes</h5>
+<br>
+<div class="container text-center">
+  <div class="row align-items-center">
+    <div class="col">
+      <h2>Registro de Clientes</h2>
+      <br>
+      <img src="assets/cliente.jpg" style="width: 40rem;height: 20rem;" class="rounded" >
+    </div>
+  </div>
+</div>
